# qly

./: .gitignore  LICENSE.BSD3.md  LICENSE.md  README.md  pyproject.toml  test.qls
.github/workflows/: build.yml  format.yml  publish.yml
docs/source/: conf.py  index.rst
docs/source/users/: reference.rst  tutorial.rst
src/qly/: main.py  vars.py
src/qly/file/: parse.py
src/qly/file/delegate/: stream.py
src/qly/functions/: ln.py  val.py
src/qly/functions/conditions/: func_if.py  obj.py
src/qly/output/: colors.py  errors.py
