[project]
name = "qly"
version = "0.1.3"
description = "Default template for PDM package"
authors = [
    {name = "Georg K.",email = "gk_coder@icloud.com"},
]
dependencies = ["sphinx>=9.1.0"]
requires-python = ">=3.14"
readme = "README.md"
license = {text = "Apache-2.0 OR BSD-3-Clause"}

[project.scripts]
qly = "qly.main:main"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
includes = ["src/qly"]
